Add custom domain

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kremlevmax.github.io/hire-me/",
+  "homepage": "https://maxkremlev.dev",
   "name": "hire-me",
   "version": "0.1.0",
   "private": true,
